syntax = "proto3";

package analysis;

import "google/protobuf/timestamp.proto";
import "user.proto";
import "apps.proto";

option go_package = "github.com/cyverse-de/p/go/analysis";

option java_multiple_files = true;
option java_package = "org.cyverse.de.protobufs";
option java_outer_classname = "AnalysisRecordProtobufs";

message BatchStatus {
  int64 total = 1;
  int64 completed = 2;
  int64 running = 3;
  int64 submitted = 4;
}

/**
 * Corresponds to the job_types table in the database.
 */
message AnalysisType {
  // The UUID for the analysis type.
  string id = 1;

  // The name of the analysis type.
  string name = 2;

  // The kind of system the analysis should run on.
  string system_id = 3 [json_name = "system_id"];
}

/**
 * An analysis in the system.
 *
 * An analysis is an app that was run by a user.
 */
message Analysis {
    // The UUID for the analysis
    string id = 1;

    // The description of the analysis provided by the user.
    string description = 2;

    // The name of the analysis provided by the user.
    string name = 3;

    // App information about the analysis.
    apps.App app = 4;

    // App version information for the analysis.
    apps.AppVersion app_version = 5 [json_name = "app_version"];

    // The analysis type, which tells which environment to run the analysis in.
    AnalysisType type = 6 [json_name = "type"];

    // The path to the folder containing analysis outputs.
    string result_folder_path = 7 [json_name = "result_folder_path"];

    // The date the analysis was submitted.
    google.protobuf.Timestamp start_date = 8 [json_name = "start_date"];

    // The date the analyses finished.
    google.protobuf.Timestamp end_date = 9 [json_name = "end_date"];

    // The date the analysis was scheduled to end.
    google.protobuf.Timestamp planned_end_date = 10 [json_name = "planned_end_date"];

    // The status of the analysis
    string status = 11;

    // Whether the analysis was deleted.
    bool deleted = 12;

    // Whether notifications should be emitted on status changes.
    bool notify = 13;

    // The user that submitted the analysis.
   user.User user = 14;

    // The subdomain assigned to the analysis for VICE.
    string subdomain = 15;

    // The UUID of the analysis that spawned this analysis. Used for batch analyses.
    string parent_id = 16 [json_name = "parent_id"];

    // The number of millicores reserved for the analysis.
    double millicores_reserved = 17 [json_name = "millicore_reserved"];
}
