syntax = "proto3";

import "header.proto";
import "analysis_record.proto";
import "svcerror.proto";

option go_package = "github.com/cyverse-de/p/go/analysis";

option java_multiple_files = true;
option java_package = "org.cyverse.de.protobufs";
option java_outer_classname = "AnalysisRequestProtobufs";

message AnalysisRecordLookupRequest {
    oneof lookup_ids {
        string analysis_id = 1;
        string external_id = 2;
        string user_id = 3;
        string username = 4;
    }

    Header header = 5;
    string requesting_user = 6;

}

message AnalysisRecordResponse {
    message StatusCountRecord {
        int64 count = 1;
        string status = 2;
    }
    Header header = 1;
    repeated AnalysisRecord analyses = 2;
    string timestamp = 3;
    int64 total = 4;
    repeated StatusCountRecord status_count = 5 [json_name = "status-count"];
    ServiceError error = 6;

}

message AnalysisRecordList {
    Header header = 1;
    repeated AnalysisRecord analyses = 2;
    ServiceError error = 7;
}