syntax = "proto3";

import "header/header.proto";

option go_package = "github.com/cyverse-de/p/go/svcerror";

enum ServiceErrorCode {
    SERVICE_ERROR_CODE_UNSET = 0;
    SERVICE_ERROR_CODE_UNSPECIFIED = 1;
    SERVICE_ERROR_CODE_INTERNAL = 2;
    SERVICE_ERROR_CODE_NOT_FOUND = 3;
    SERVICE_ERROR_CODE_BAD_REQUEST = 4;
}

message ServiceError {
    Header header = 1;
    ServiceErrorCode error_code = 2 [json_name = "error_code"];
    int32 status_code = 3 [json_name = "status_code"];
    string message = 4;

}